2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml:
	* MonoDevelop.Ide.Projects.OptionPanels/NamespaceSynchronisationPanel.cs:
	  Naming policies panel should be shown for all items that
	  contain DotNetProject, not just DotNetProject. 

2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic: Flsuh.

	* Makefile.am:
	* gtk-gui/objects.xml: Removed objects.xml from the
	  Makefile.am since it's not in the project file and was
	  breaking the build when MD added a resource ID to the
	  makefile.

2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: The "navigate forward/back"
	  commands now use the Xcode binding, and a similar binding on
	  Windows so they no longer block the subword navigation. Also
	  add a Mac binding for "move selection up/down"

2010-07-09  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Components/SearchEntry.cs: taken out event
	  handler on destroy.

2010-07-05  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWindow.cs: Fixed 'Bug
	  619800 - Auto-complete of nothing shouldn't auto-complete as
	  void'.

2010-06-29  Carlo Kok  <ck@remobjects.com>

	* MonoDevelop.Ide.Extensions/MimeTypeOptionsPanelNode.cs: Make
	  the label localizable.

2010-06-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Navigation/NavigationHistoryService.cs: When
	  clearing the navigation history, don't reuse the current
	  item since it is destroyed by the clear method. Should fix
	  bug #606557 - Invalid items in history service.

2010-06-29  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.Docking/DockItemContainer.cs: Added
	  missing null checks. Fixes bug #613437 - Null Reference
	  Exception on loading a project.

2010-06-28  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Components.Docking/DockBarItem.cs: Don't hide
	  the item if the mouse pointer is inside the window. Fixes