@@ -1,3 +1,8 @@
+2010-07-12  Levi Bard  <levi@unity3d.com>
+
+	* MonoDevelop.Ide.ProgressMonitoring/BaseProgressMonitor.cs:
+	  Fix #617276: MD crashes when clicking a script error in Unity3d.
+
 2010-07-11  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* MonoDevelop.Ide.addin.xml:
